<resources>
    <string name="app_name">anti-spam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="call_blacklist">Call Blacklist</string>
    <string name="sms_warning">SMS Warning</string>
    <string name="community_blocking">Community Blocking</string>
    <string name="settings">Settings</string>
    <string name="learn_scam">Learn Scam</string>
    <string name="get_started">Get started</string>
    <string name="logo">Logo</string>
    <string name="add_blacklisting">Add blacklisting</string>
    <string name="personal_blacklist_image">Personal Blacklist Image</string>
    <string name="PB_text">The blacklist is empty. Tap the + button to block a phone number.</string>
    <string name="block_by_country">Block By Country</string>
    <string name="block_by_number">Block By Number</string>
    <string name="block_by_regex">Block By Regex</string>
    <string name="phone_number_block">Phone Number Block</string>
    <string name="country_block">Country Block</string>
    <string name="select">Select Country</string>
    <string name="hint_number">+353 00 000 0000</string>
    <string name="regex_block">Regex Block</string>
    <string name="hint_regex">/(D*d){8}/</string>
    <string name="number_block">Number Block</string>
    <string name="block_regex">Regex Block</string>
    <string name="personal_sms_black_list_image">personal sms black list image</string>
    <string name="PBS_text">The blacklist is empty. Tap the + button to warn by SMS.</string>
    <string name="block_by_keyword">Block by keyword</string>
    <string name="keyword_warning">Keyword Warning</string>
    <string name="warn_by_keyword">Warn by keyword</string>
    <string name="hint_keyword">https://bit.ly/3TKVfjZ</string>
    <string name="regex_warning">Regex Warning</string>
    <string name="warn_by_regex">Warn by regex</string>
    <string name="community_image">community_image</string>
    <string name="community_empty_text">Community reports seem to be empty. Tap the + button to report a fraudulent phone number.</string>
    <string name="add_report">Add Report</string>
    <string name="report_number">Report Number</string>
    <string name="add_report_text">Add Report</string>
    <string name="enter_title">Enter title</string>
    <string name="select_country">Select Country</string>
    <string name="my_country">My Country</string>
    <string name="warning_level">Warning Level</string>
    <string name="select_warning">Select Warning</string>
    <string name="brief_description">Brief Description</string>
    <string name="report_number_text">Report Number</string>
    <string name="enter_description">Enter Description</string>
    <string name="country">Country</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="add_number_to_blacklist">Add number to blacklist?</string>
    <string name="number">Number</string>
    <string name="description">Description</string>
    <string name="add_comment">Add Comment</string>
    <string name="delete_report">Delete Report</string>
    <string name="edit_report">Edit Report</string>
    <string name="close">Close</string>
    <string name="error_number_not_associated">The reported number must be present in your call list in order to leave a comment on it.</string>
    <string name="ok">OK</string>
    <string name="you_can_only_comment_once_on_a_reported_number">You can only comment once on a reported number.</string>
    <string name="edit">Edit</string>
    <string name="number_already_reported">This number has been reported by another user, would you like to view it?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_report_confirm_text">Are you sure you want to delete the current report? Changes cannot be undone.</string>
    <string name="personal_view_pager_empty_text">Your personal reports seem to be empty. Tap the + button to report a phone number.</string>
    <string name="settings_scan_sms">Scan SMS</string>
    <string name="settings_scan_sms_desc">Checks incoming SMS body and warns if detected suspicious string.</string>
    <string name="settings_database_blocking">Database Blocking</string>
    <string name="settings_database_blocking_description">Blocks incoming phone calls using the database blocklist. (Requires Wi-Fi)</string>
    <string name="toggle_off">OFF</string>
    <string name="settings_personal_blacklist_blocking">Personal Blacklist Blocking</string>
    <string name="settings_personal_blacklist_blocking_description">Blocks incoming phone calls using personal blacklist.</string>
    <string name="settings_local_storage_blocking">Local Storage Blocking</string>
    <string name="settings_local_storage_blocking_description">Blocks incoming phone calls using local storage. (Downloaded from the database).</string>
    <string name="settings_block_unknown_numbers">Block Unknown Numbers</string>
    <string name="settings_block_unknown_numbers_description">Blocks incoming phone calls using local storage. (Downloaded from the database).</string>
    <string name="settings_community_blocking">Community Blocking</string>
    <string name="settings_community_blocking_description">Blocks community reported numbers by negative comments</string>
    <string name="settings_community_comments_text">Comments:</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_description">Toggle between dark / light theme</string>
    <string name="settings_download_blacklist">Download Blacklist</string>
    <string name="settings_download_blacklist_description">Downloads blacklists from cloud. (When internet connection is down)</string>
    <string-array name="warning">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>