<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >



        <item android:title="Blocking" >
            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_check"
                        android:title="Check Number" />
        <item
            android:id="@+id/nav_call_blacklist"
            android:icon="@drawable/ic_block"
            android:title="@string/call_blacklist"
            />
        <item
            android:id="@+id/nav_sms_blacklist"
            android:icon="@drawable/ic_warn"
            android:title="@string/sms_warning" />
        <item
            android:id="@+id/nav_community_blocking"
            android:icon="@drawable/ic_community"
            android:title="@string/community_blocking" />

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="Adjust Settings" />
                </group>
            </menu>
        </item>
    <item android:title="Other">
        <menu>
            <group android:checkableBehavior="all">
            <item
                android:id="@+id/nav_learnscampatterns"
                android:icon="@drawable/ic_spamlearn"
                android:title="@string/learn_scam" />


            </group>
        </menu>
    </item>

    <item android:title="Account Control">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="Logout" />
            </group>
        </menu>
    </item>

</menu>