<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    tools:context=".ui.communityblocking.EditUserReportDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/edit_report"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="12dp"
            />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/icon_cancel" />
    </RelativeLayout>

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:background="@color/blueish"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/country"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountry"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/select_country"
        android:layout_gravity="center"
        >

        <AutoCompleteTextView
            android:id="@+id/country_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="250dp"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/warning_level"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWarning"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/select_warning"
        android:layout_gravity="center"
        >

        <AutoCompleteTextView
            android:id="@+id/warning_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="175dp"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/brief_description"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_description"

        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:inputType="textMultiLine"
            android:maxLength="120"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Edit_report"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit"
        android:layout_gravity="center"
        >
    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>