<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    tools:context=".ui.communityblocking.AddBlacklistQuestionDialog"
    >

    <TextView
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/add_number_to_blacklist"
        android:textColor="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:id="@+id/dontAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/no"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            />
    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>