<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.smsblacklist.Smsblacklist">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/block_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/personal_sms_black_list_image"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:background="@drawable/personalblacklistsms"
        />
    <TextView
        android:id="@+id/block_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="2"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:text="@string/PBS_text"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/blueish"
        app:tint="@android:color/white"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add_blacklisting" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>