<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    tools:context=".ui.communityblocking.DeleteReportConfirmDialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_warning"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/blueish"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/delete_report_confirm_text"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:id="@+id/dontDelete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            />

        <Button
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/delete"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            />
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>